--- a/public/index.html
+++ b/public/index.html
@@ -211,7 +211,7 @@
     updateTSLAPrice();
     setInterval(updateTSLAPrice, 30000);
 
-    // News Feed from Electrek
+    // News Feed from Electrek (fixed parsing)
     async function loadTeslaNews() {
       const newsFeed = document.getElementById('news-feed');
       const rssUrl = 'https://electrek.co/feed/';
@@ -226,23 +226,30 @@
 
         newsFeed.innerHTML = '';
         let count = 0;
-        items.forEach(item => {
-          if (count >= 10) return;
-          const title = item.querySelector("title")?.textContent || 'No title';
-          const link = item.querySelector("link")?.textContent || '#';
-          const pubDate = new Date(item.querySelector("pubDate")?.textContent || Date.now()).toLocaleDateString();
+        for (const item of items) {
+          if (count >= 10) break;
+          const titleElement = item.querySelector("title");
+          const linkElement = item.querySelector("link");
+          const pubDateElement = item.querySelector("pubDate");
+
+          const title = titleElement ? titleElement.textContent.trim() : 'No title';
+          const link = linkElement ? linkElement.textContent.trim() : '#';
+          const pubDate = pubDateElement ? pubDateElement.textContent : null;
+          const date = pubDate ? new Date(pubDate).toLocaleDateString() : 'Recent';
 
           const newsItem = document.createElement('div');
           newsItem.className = 'news-item';
           newsItem.innerHTML = `
-            <div class="news-title"><a href="\( {link}" target="_blank"> \){title}</a></div>
-            <div class="news-date">${pubDate}</div>
+            <div class="news-title">
+              <a href="\( {link}" target="_blank"> \){title}</a>
+            </div>
+            <div class="news-date">${date}</div>
           `;
           newsFeed.appendChild(newsItem);
           count++;
-        });
+        }
       } catch (error) {
-        newsFeed.innerHTML = '<div class="news-item" style="text-align:center;">News temporarily unavailable</div>';
+        newsFeed.innerHTML = '<div class="news-item" style="text-align:center;color:#aaa;">News temporarily unavailable</div>';
       }
     }
 
