--- a/public/index.html
+++ b/public/index.html
@@ -7,16 +7,16 @@
   <style>
     * { box-sizing: border-box; margin: 0; padding: 0; }
     body { font-family: system-ui, sans-serif; background: #000; color: white; min-height: 100vh; display: flex; flex-direction: column; }
-    .header { position: relative; height: 55vh; overflow: hidden; }
+    .header { position: relative; height: 40vh; overflow: hidden; } /* Было 55vh → стало 40vh */
     .header-image { width: 100%; height: 100%; object-fit: cover; }
-    .header-text { position: absolute; top: 20px; left: 16px; text-shadow: 2px 2px 8px #000; }
-    .title { font-size: 36px; font-weight: 900; color: #e31937; }
-    .subtitle { font-size: 20px; margin: 10px 0; }
-    .motto { font-size: 24px; margin-top: 20px; }
-    .price-section { background: #111; padding: 24px 16px; text-align: center; }
-    .price-title { color: #e31937; font-size: 28px; font-weight: 700; margin-bottom: 12px; }
-    .price-value { font-size: 48px; font-weight: 800; }
-    .price-change { font-size: 18px; margin-top: 8px; }
+    .header-text { position: absolute; top: 16px; left: 16px; text-shadow: 2px 2px 8px #000; }
+    .title { font-size: 32px; font-weight: 900; color: #e31937; }
+    .subtitle { font-size: 18px; margin: 8px 0; }
+    .motto { font-size: 22px; margin-top: 16px; }
+    .price-section { background: #111; padding: 20px 16px; text-align: center; }
+    .price-title { color: #e31937; font-size: 26px; font-weight: 700; margin-bottom: 10px; }
+    .price-value { font-size: 44px; font-weight: 800; }
+    .price-change { font-size: 17px; margin-top: 8px; }
     .positive { color: #0f0; }
     .negative { color: #f44; }
     .neutral { color: #aaa; }
