--- a/public/index.html
+++ b/public/index.html
@@ -5,32 +5,32 @@ export default function Home() {
   const priceChange = "-10.37 (-2.13%)"; // Пример изменения за день
 
   const catalysts = [
-    {
-      title: "Robotaxi Unsupervised Scaling",
-      description: "Fleet expanding in Austin without safety drivers. Regulatory approvals advancing – trillion-dollar ride-hailing network closer than ever.",
-      date: "December 2025",
-    },
-    {
-      title: "FSD v14+ Excellence",
-      description: "End-to-end AI delivering smoother rides, outperforming rivals in real-world scenarios. China launch imminent.",
-      date: "December 2025",
-    },
-    {
-      title: "Optimus Factory Thousands",
-      description: "Humanoid robots actively working in Tesla plants. External sales targeted for 2026 – robotics revolution accelerating.",
-      date: "December 2025",
-    },
-    {
-      title: "Energy Storage Boom",
-      description: ">100% YoY deployment growth, margins beating automotive. Megapack demand surging globally.",
-      date: "December 2025",
-    },
-    {
-      title: "TSLA Bull Momentum",
-      description: "Trading ~$475–485 after Christmas highs. Analysts raising targets to $500–600+ on autonomy & robotics valuation unlock.",
-      date: "December 27, 2025",
-    },
-  ];
+  {
+    title: "Robotaxi Unsupervised Scaling",
+    description: "Fleet expanding in Austin without safety drivers. Regulatory approvals advancing – trillion-dollar ride-hailing network closer than ever.",
+    date: "December 2025",
+  },
+  {
+    title: "FSD v14+ Excellence",
+    description: "End-to-end AI delivering smoother rides, outperforming rivals. China launch imminent.",
+    date: "December 2025",
+  },
+  {
+    title: "Optimus Factory Thousands",
+    description: "Humanoid robots actively working in Tesla plants. External sales targeted for 2026 – robotics revolution accelerating.",
+    date: "December 2025",
+  },
+  {
+    title: "Energy Storage Boom",
+    description: ">100% YoY deployment growth, margins beating automotive. Megapack demand surging globally.",
+    date: "December 2025",
+  },
+  {
+    title: "TSLA Bull Momentum",
+    description: "Trading ~$475–485 in buy zone. Analysts raising targets to $500–600+ on autonomy & robotics valuation unlock.",
+    date: "December 27, 2025",
+  },
+];
 
   return (
     <main className="bg-black text-white min-h-screen">
